--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .exe
+result.txt
 /data
+/replay
 #==============================================================================#
 # File extensions to be ignored anywhere in the tree.
 #==============================================================================#
