--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 result.txt
 /data
 /replay
+/.venv
 #==============================================================================#
 # File extensions to be ignored anywhere in the tree.
 #==============================================================================#
