--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,18 @@ set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/)
 option(BUILD_SHARED_LIBS  ""  OFF)
 
 include_directories(src/include)
+aux_source_directory(src SRC)
 
-aux_source_directory(src/include cur_src_include)
-aux_source_directory(src cur_src)
+add_executable(code_craft ${SRC})
 
+add_custom_target(format
+        clang-format -i ../src/*.cpp ../src/include/*.h
+)
 
-add_executable(code_craft ${cur_src} ${cur_src_include})
+add_custom_target(check-clang-tidy
+        clang-tidy -p ${CMAKE_BINARY_DIR} -header-filter=. ../src/*.cpp
+)
+
+add_custom_target(run
+  python3 ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ../code_craft.exe
+)
