--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_custom_target(check-clang-tidy
 )
 
 add_custom_target(run
-  python3 ../tools/run.py ../tools/interactor.exe ../data/sample.in ./code_craft.exe
+  python3 ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ./code_craft.exe
 )
 
 add_custom_target(debug
