--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,15 +20,16 @@ add_custom_target(check-clang-tidy
 )
 if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
 add_custom_target(run
-  python3 ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ./code_craft.exe
+  python ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ./code_craft.exe
 )
 else()
-  add_custom_target(run
-    python3 ../tools/run.py ../tools/interactor ../data/sample_practice.in ./code_craft)
+add_custom_target(run
+  python ../tools/run.py ../tools/interactor ../data/sample_practice.in ./code_craft
+)
 endif()
 
 add_custom_target(debug
-  python3 ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ./code_craft.exe -d
+  python ../tools/run.py ../tools/interactor.exe ../data/sample_practice.in ./code_craft.exe -d
 )
 
 add_custom_target(submit
