--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /run.py
 /.interactor
 /Makefile
+/log/*
 #==============================================================================#
 # File extensions to be ignored anywhere in the tree.
 #==============================================================================#
